@@ -1,5 +1,8 @@
 This file documents the revision history for mod_gearman.
 
+next:
+          - fix undefined symbol notification_reason_name in nagios3 module
+
 3.0.2 Fri May  5 12:13:45 CEST 2017
           - add distribution of notifications
 
